# synlink

./: .gitignore  LICENCE-APACHE.md  Makefile  README.md
.github/workflows/: python-release.yml  python.yml
binding/python/: Cargo.toml  README.md  pyproject.toml
binding/python/py/: __init__.py
binding/python/py/error/: __init__.ipy  __init__.py
binding/python/py/synlink/: __init__.py  multiaddr.py  peer_id.py  typing.py  utils.py
binding/python/py/synlink/crypto/: ed25519.py  exception.py  io.py  kind.py  typing.py  utils.py
binding/python/py/synlink/swarm/: protocol.py
binding/python/src/: error.rs  lib.rs  utils.rs
binding/python/tests/: test_multaddr.py  test_peer_id.py
binding/python/tests/crypto/: test_ed25519.py  test_io.py  test_kind.py
binding/python/tests/imports/: test_import.py
docs/: conf.py  index.rst
