[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "ipms_py"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
quality = []
testing = []

[tool.maturin]
python-source = "py"
module-name = "ipms._ipms_rs"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
