[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "synlink_py"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
quality = []
testing = []

[tool.maturin]
python-source = "py"
module-name = "synlink._synlink_rs"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
